--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,25 @@ target
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
+.idea/
+
+# IDE
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Debug
+*.log
+debug_output/
+
+# Solution-specific
+solution/
+docker_image/
 #.idea/
+
+
+# Added by cargo
+
+/target
